# jami-plugins-fork

./: .gitignore  .gitreview  README.md  assemble-plugin.py  assemblePlugin.py  build-plugin.py
AutoSubs/: CMakeLists.txt  README.txt  audiosubscriber.cpp  audiosubscriber.h  chathandler.cpp  chathandler.h  chatobserver.cpp  chatobserver.h  main.cpp  manifest.json  messagequeue.cpp  messagequeue.h  pluginMediaHandler.cpp  pluginMediaHandler.h  pluginParameters.cpp  pluginParameters.h  videoSubscriber.cpp  videoSubscriber.h
AutoSubs/cmake/: FindFreetype.cmake  Findlibfvad.cmake
AutoSubs/model/: CMakeLists.txt  asrmodel.cpp  asrmodel.h  codes.cpp  codes.h
AutoSubs/model/feat/: feature-fbank.cc  feature-fbank.h  feature-window.cc  feature-window.h  mel-computations.cc  mel-computations.h  online-feature.cc  online-feature.h  srfft.cc  srfft.h  utils.cpp  utils.h
AutoSubs/model/test/: CMakeLists.txt  main.cpp
ForegroundSegmentation/: TFInference.cpp  TFInference.h  TFModels.h  build.sh  buildandroid.sh  buildtfcc.sh  main.cpp  manifest.json  pluginInference.cpp  pluginInference.h  pluginMediaHandler.cpp  pluginMediaHandler.h  pluginParameters.cpp  pluginParameters.h  pluginProcessor.cpp  pluginProcessor.h  preferences-cpu.json  videoSubscriber.cpp  videoSubscriber.h
ForegroundSegmentation/data/: preferences.json
ForegroundSegmentation/data/models/: model_256_Qlatency.tflite  model_256_Qlatency_32.tflite
ForegroundSegmentation/modelsSRC/: mModel-mobilenetDefaultQauntized.tflite  mModel-mobilenetQuantWeightsActivationsDefault.tflite  mModel-mobilenetQuantWeightsDefault.tflite
GreenScreen/: CMakeLists.txt  TFInference.cpp  TFInference.h  TFModels.h  build.sh  buildandroid.sh  buildtfcc.sh  main.cpp  manifest.json  package.json  pluginInference.cpp  pluginInference.h  pluginMediaHandler.cpp  pluginMediaHandler.h  pluginParameters.cpp  pluginParameters.h  pluginProcessor.cpp  pluginProcessor.h  preferences-tfcc.json  preferences-tflite.json  videoSubscriber.cpp  videoSubscriber.h
GreenScreen/modelsSRC/: model_256_Qlatency_16.tflite
contrib/: build-dependencies.sh
docker/: Dockerfile_android  Dockerfile_ubuntu_20.04
lib/: accel.h  framescaler.h  pluglog.h  preferenceHelper.h
